Fix spacing of ‘only showing […] rows’ message
It was too far apart.

Can’t be fixed by reducing the margin on the table because this would
bring the table too close to other elements when the ‘only showing’
thing isn’t present.

--- a/app/assets/stylesheets/components/fullscreen-table.scss
+++ b/app/assets/stylesheets/components/fullscreen-table.scss
@@ -130,9 +130,16 @@
   }
 
   &-shim {
+
     width: 100%;
     position: relative;
     z-index: 9;
+    margin-bottom: 30px;
+
+    & + .table-show-more-link {
+      margin-top: -28px;
+    }
+
   }
 
 }
